Updated paths for results saving

--- a/fast/glue.ipynb
+++ b/fast/glue.ipynb
@@ -163,7 +163,7 @@
    "source": [
     "model_param = \"DistilRoBERTa\"\n",
     "task_param = \"wnli\"\n",
-    "embedding_param = [\"cls_single\"]"
+    "embedding_param = [\"meanpool_single\"]"
    ]
   },
   {
@@ -182,7 +182,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Some weights of the model checkpoint at distilroberta-base were not used when initializing RobertaModel: ['lm_head.bias', 'lm_head.layer_norm.weight', 'lm_head.dense.weight', 'lm_head.dense.bias', 'lm_head.layer_norm.bias']\n",
+      "Some weights of the model checkpoint at distilroberta-base were not used when initializing RobertaModel: ['lm_head.dense.weight', 'lm_head.layer_norm.weight', 'lm_head.layer_norm.bias', 'lm_head.dense.bias', 'lm_head.bias']\n",
       "- This IS expected if you are initializing RobertaModel from the checkpoint of a model trained on another task or with another architecture (e.g. initializing a BertForSequenceClassification model from a BertForPreTraining model).\n",
       "- This IS NOT expected if you are initializing RobertaModel from the checkpoint of a model that you expect to be exactly identical (initializing a BertForSequenceClassification model from a BertForSequenceClassification model).\n"
      ]
@@ -335,7 +335,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cls_single embeddings found!\n",
+      "meanpool_single embeddings found!\n",
       "X_train shape: (635, 1536)\n",
       "X_val shape  : (71, 1536)\n",
       "X_test shape : (146, 1536)\n"
@@ -735,20 +735,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "saving results to ./results/cls_single/wnli/val_20240204_172132_DistilRoBERTa.csv\n"
+      "saving results to ./../../fast-results/results/meanpool_single/wnli/val_20240204_175313_DistilRoBERTa.csv\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fc356170e5ba452fae132f31462f0207",
+       "model_id": "23d4e9688615440fb358a8e27ed942e1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -763,28 +763,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/50 | Training Loss : 0.6903933882713318 | Validation Loss : 0.6933314204216003\n",
+      "Epoch 1/50 | Training Loss : 0.68562912940979 | Validation Loss : 0.689026951789856\n",
       "Accuracy : 0.5633802816901409 | f1 : 0.5633802816901409\n",
       "\n",
-      "Epoch 2/50 | Training Loss : 0.6927517056465149 | Validation Loss : 0.6942805051803589\n",
+      "Epoch 2/50 | Training Loss : 0.6921358704566956 | Validation Loss : 0.6929911375045776\n",
       "Accuracy : 0.5633802816901409 | f1 : 0.5633802816901409\n",
       "\n",
-      "Epoch 3/50 | Training Loss : 0.6932032108306885 | Validation Loss : 0.6933015584945679\n",
+      "Epoch 3/50 | Training Loss : 0.6932677030563354 | Validation Loss : 0.6929928064346313\n",
       "Accuracy : 0.5633802816901409 | f1 : 0.5633802816901409\n",
       "\n",
-      "Epoch 4/50 | Training Loss : 0.6936416625976562 | Validation Loss : 0.692804753780365\n",
-      "Accuracy : 0.5633802816901409 | f1 : 0.5633802816901409\n",
-      "\n",
-      "Epoch 5/50 | Training Loss : 0.6937986612319946 | Validation Loss : 0.6922225952148438\n",
-      "Accuracy : 0.5633802816901409 | f1 : 0.5633802816901409\n",
-      "\n",
-      "Epoch 6/50 | Training Loss : 0.6992215514183044 | Validation Loss : 0.6930813789367676\n",
-      "Accuracy : 0.5633802816901409 | f1 : 0.5633802816901409\n",
-      "\n",
-      "Epoch 7/50 | Training Loss : 0.6830951571464539 | Validation Loss : 0.6940426826477051\n",
-      "Accuracy : 0.5633802816901409 | f1 : 0.5633802816901409\n",
-      "\n",
-      "Epoch 8/50 | Training Loss : 0.6952673196792603 | Validation Loss : 0.694739580154419\n",
+      "Epoch 4/50 | Training Loss : 0.6935994029045105 | Validation Loss : 0.6928735971450806\n",
       "Accuracy : 0.5633802816901409 | f1 : 0.5633802816901409\n",
       "\n"
      ]
@@ -802,7 +790,7 @@
     "    logfile.write('\\n\\nBEGIN TRAINING LOOP\\n\\n')\n",
     "\n",
     "# Setup for saving results\n",
-    "results_folder = pathlib.Path(f\"results/{embedding_param[0]}/{task_param}\")\n",
+    "results_folder = pathlib.Path(f\"../../fast-results/results/{embedding_param[0]}/{task_param}\")\n",
     "results_folder.mkdir(parents=True, exist_ok=True)\n",
     "save_file_id = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
     "results_file = results_folder / f\"val_{save_file_id}_{model_param}.csv\"\n",
@@ -928,11 +916,11 @@
        "      <td>0.0</td>\n",
        "      <td>0.56338</td>\n",
        "      <td>0.56338</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.163129</td>\n",
-       "      <td>0.000117</td>\n",
-       "      <td>12.234704</td>\n",
-       "      <td>0.008762</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.219094</td>\n",
+       "      <td>0.000485</td>\n",
+       "      <td>16.432066</td>\n",
+       "      <td>0.036371</td>\n",
        "      <td>50</td>\n",
        "      <td>32</td>\n",
        "      <td>...</td>\n",
@@ -954,10 +942,10 @@
       ],
       "text/plain": [
        "   mcc       f1  accuracy  num_epochs  training time / epoch  embedding time  \\\n",
-       "0  0.0  0.56338   0.56338           5               0.163129        0.000117   \n",
+       "0  0.0  0.56338   0.56338           1               0.219094        0.000485   \n",
        "\n",
        "   training energy / epoch  embedding energy  max_epochs  batch_size  ...  \\\n",
-       "0                12.234704          0.008762          50          32  ...   \n",
+       "0                16.432066          0.036371          50          32  ...   \n",
        "\n",
        "    norm input_size  layer_size  num_classes  num_layers  weight_decay  \\\n",
        "0  False        768         768            1           1        0.0001   \n",
@@ -1041,11 +1029,11 @@
        "      <td>0.0</td>\n",
        "      <td>0.56338</td>\n",
        "      <td>0.56338</td>\n",
-       "      <td>5</td>\n",
-       "      <td>0.163129</td>\n",
-       "      <td>0.000117</td>\n",
-       "      <td>12.234704</td>\n",
-       "      <td>0.008762</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.219094</td>\n",
+       "      <td>0.000485</td>\n",
+       "      <td>16.432066</td>\n",
+       "      <td>0.036371</td>\n",
        "      <td>50</td>\n",
        "      <td>32</td>\n",
        "      <td>...</td>\n",
@@ -1067,10 +1055,10 @@
       ],
       "text/plain": [
        "   mcc       f1  accuracy  num_epochs  training time / epoch  embedding time  \\\n",
-       "0  0.0  0.56338   0.56338           5               0.163129        0.000117   \n",
+       "0  0.0  0.56338   0.56338           1               0.219094        0.000485   \n",
        "\n",
        "   training energy / epoch  embedding energy  max_epochs  batch_size  ...  \\\n",
-       "0                12.234704          0.008762          50          32  ...   \n",
+       "0                16.432066          0.036371          50          32  ...   \n",
        "\n",
        "    norm input_size  layer_size  num_classes  num_layers  weight_decay  \\\n",
        "0  False        768         768            1           1        0.0001   \n",
