--- a/fast/predict.ipynb
+++ b/fast/predict.ipynb
@@ -28,8 +28,8 @@
    "outputs": [],
    "source": [
     "model_param = \"DistilRoBERTa\"\n",
-    "task_param = \"mrpc\"\n",
-    "embedding_param = [\"sentence_single\"]"
+    "task_param = \"wnli\"\n",
+    "embedding_param = [\"meanpool_single\"]"
    ]
   },
   {
@@ -39,7 +39,8 @@
    "outputs": [],
    "source": [
     "import utils.extract_hyperparam\n",
-    "filepath = \"./results/\" # base directory for results .csv files\n",
+    "# filepath = \"./results/\" # base directory for results .csv files\n",
+    "filepath = \"../../fast-results/results/\"\n",
     "dates = [] # get results from specific dates\n",
     "\n",
     "param_grid = utils.extract_hyperparam.extract_all_from_dir(filepath, embedding_param[0], task_param, dates=dates)\n",
@@ -493,7 +494,7 @@
     "    logfile.write('\\n\\nBEGIN FINAL TRAINING LOOP\\n\\n')\n",
     "\n",
     "# Setup for saving results\n",
-    "results_folder = pathlib.Path(f\"results/{embedding_param[0]}/{task_param}\")\n",
+    "results_folder = pathlib.Path(f\"../../fast-results/results/{embedding_param[0]}/{task_param}\")\n",
     "results_folder.mkdir(parents=True, exist_ok=True)\n",
     "save_file_id = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
     "test_results_file = results_folder / f\"test_{save_file_id}_{model_param}.csv\"\n",
@@ -573,104 +574,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>mcc</th>\n",
-       "      <th>f1</th>\n",
-       "      <th>accuracy</th>\n",
-       "      <th>training time / epoch</th>\n",
-       "      <th>embedding time</th>\n",
-       "      <th>training energy / epoch</th>\n",
-       "      <th>embedding energy</th>\n",
-       "      <th>max_epochs</th>\n",
-       "      <th>batch_size</th>\n",
-       "      <th>learning_rate</th>\n",
-       "      <th>...</th>\n",
-       "      <th>norm</th>\n",
-       "      <th>input_size</th>\n",
-       "      <th>layer_size</th>\n",
-       "      <th>num_classes</th>\n",
-       "      <th>num_layers</th>\n",
-       "      <th>weight_decay</th>\n",
-       "      <th>patience</th>\n",
-       "      <th>min_delta</th>\n",
-       "      <th>verbose</th>\n",
-       "      <th>device</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0.252772</td>\n",
-       "      <td>0.674203</td>\n",
-       "      <td>0.674203</td>\n",
-       "      <td>1.130909</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>84.818191</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>50</td>\n",
-       "      <td>32</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>...</td>\n",
-       "      <td>False</td>\n",
-       "      <td>768</td>\n",
-       "      <td>768</td>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0.01</td>\n",
-       "      <td>3</td>\n",
-       "      <td>0</td>\n",
-       "      <td>True</td>\n",
-       "      <td>mps</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1 rows × 21 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "        mcc        f1  accuracy  training time / epoch  embedding time  \\\n",
-       "0  0.252772  0.674203  0.674203               1.130909             0.0   \n",
-       "\n",
-       "   training energy / epoch  embedding energy  max_epochs  batch_size  \\\n",
-       "0                84.818191               0.0          50          32   \n",
-       "\n",
-       "   learning_rate  ...   norm  input_size  layer_size  num_classes  num_layers  \\\n",
-       "0           0.01  ...  False         768         768            1           3   \n",
-       "\n",
-       "   weight_decay  patience  min_delta  verbose  device  \n",
-       "0          0.01         3          0     True     mps  \n",
-       "\n",
-       "[1 rows x 21 columns]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "results_df = pd.read_csv(test_results_file)\n",
     "results_df"
@@ -696,8 +602,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = \"./glue_submission/meanpool/QNLI.tsv\"\n",
-    "new_filepath = \"./glue_submission/meanpool/QNLI_new.tsv\"\n",
+    "filepath = \"../../fast-results/glue_submissions/fast/meanpool/QNLI.tsv\"\n",
+    "new_filepath = \"../../fast-results/glue_submissions/fast/meanpool/QNLI_new.tsv\"\n",
     "\n",
     "df = pd.read_csv(filepath, sep='\\t')\n",
     "df['prediction'] = df['prediction'].replace({0: 'entailment', 1: 'not_entailment'})\n",
@@ -717,8 +623,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "filepath = \"./glue_submission/st/MNLI-m-raw.tsv\"\n",
-    "new_filepath = \"./glue_submission/st/MNLI-m.tsv\"\n",
+    "filepath = \"../../fast-results/glue_submissions/fast/st/MNLI-m-raw.tsv\"\n",
+    "new_filepath = \"../../fast-results/glue_submissions/fast/st/MNLI-m.tsv\"\n",
     "\n",
     "df = pd.read_csv(filepath, sep='\\t')\n",
     "df['prediction'] = df['prediction'].replace({0: 'entailment', 1: 'neutral', 2: 'contradiction'})\n",
