Update adaptor code (WIP)

--- a/fast/glue.ipynb
+++ b/fast/glue.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,17 +86,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "mps\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "device_name = \"cpu\"  # Default device is CPU\n",
     "if torch.cuda.is_available():\n",
@@ -157,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,33 +230,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "DatasetDict({\n",
-       "    train: Dataset({\n",
-       "        features: ['sentence1', 'sentence2', 'label', 'idx'],\n",
-       "        num_rows: 635\n",
-       "    })\n",
-       "    validation: Dataset({\n",
-       "        features: ['sentence1', 'sentence2', 'label', 'idx'],\n",
-       "        num_rows: 71\n",
-       "    })\n",
-       "    test: Dataset({\n",
-       "        features: ['sentence1', 'sentence2', 'label', 'idx'],\n",
-       "        num_rows: 146\n",
-       "    })\n",
-       "})"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "if task_param == \"mnli_matched\": \n",
     "    data = load_dataset(\"glue\", \"mnli\") \n",
@@ -298,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,20 +296,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "meanpool_single embeddings found!\n",
-      "X_train shape: (635, 1536)\n",
-      "X_val shape  : (71, 1536)\n",
-      "X_test shape : (146, 1536)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "total_length = len(embedding_param)\n",
     "\n",
@@ -385,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,7 +553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,19 +575,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "X_train shape: (635, 1536)\n",
-      "X_val shape  : (71, 1536)\n",
-      "X_test shape : (146, 1536)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X_train = np.concatenate(X_train, axis=1)\n",
     "X_val = np.concatenate(X_val, axis=1)\n",
@@ -649,19 +596,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(635, 768)\n",
-      "(71, 768)\n",
-      "(146, 768)\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "def add_embeddings(embeddings, column_ids, embedding_size, is_UV, is_diff, is_mult):\n",
+    "    '''\n",
+    "    Add embeddings at specific column_ids. For example, for the matrix\n",
+    "    [Z1, Z2, U1, V1, Z3, U2, V2], if we want to replace this with:\n",
+    "    [Z1, Z2, U1 - V1, Z3, U2, V2, U2 - V2, U2 * V2], we provide the parameters:\n",
+    "    is_UV = [False, True] : U1, V1 are NOT kept, but U2, V2 are kept\n",
+    "    is_diff = [True, True] : both U1 - V1 and U2 - V2 are added\n",
+    "    is_mult = [False, True] : U1 * V1 is not included, U2 * V2 is included\n",
+    "\n",
+    "    Args:\n",
+    "        embeddings : original matrix to replace\n",
+    "        column_ids : location of Ux (we assume Vx immedeately follows Ux), \n",
+    "                     for the above example, we would provide column_ids = [2, 5].\n",
+    "                     If you DO NOT want to replace a certain Ux, simply don't include its id in column_ids\n",
+    "        is_UV : should Ux, Vx be included\n",
+    "        is_diff : should Ux - Vx be included\n",
+    "        is_mult : should Ux * Vx be included\n",
+    "    '''\n",
+    "\n",
+    "    id_delta = 0 # keep track of changes to embedding inserts/deletions\n",
+    "    for id, column_id in enumerate(column_ids):\n",
+    "\n",
+    "        if id>0:\n",
+    "            if not is_UV[id-1]:\n",
+    "                id_delta -= 2\n",
+    "            if is_diff[id-1]:\n",
+    "                id_delta += 1\n",
+    "            if is_mult[id-1]:\n",
+    "                id_delta += 1\n",
+    "\n",
+    "        start_id = (column_id + id_delta) * embedding_size\n",
+    "        U_id = start_id + embedding_size\n",
+    "        V_id = start_id + (2*embedding_size)\n",
+    "\n",
+    "        U = embeddings[:, start_id:U_id]\n",
+    "        V = embeddings[:, U_id:V_id]\n",
+    "\n",
+    "        if is_diff[id] and not is_mult[id]:\n",
+    "            new_embeddings = (U - V)\n",
+    "        elif not is_diff[id] and is_mult[id]:\n",
+    "            new_embeddings = U * V\n",
+    "        else: # both\n",
+    "            new_embeddings = np.hstack([(U - V), (U * V)])\n",
+    "\n",
+    "        if is_UV[id]:                  \n",
+    "            embeddings = np.hstack([\n",
+    "                embeddings[:, :V_id],       # Part of original matrix before replacement\n",
+    "                new_embeddings,             # New embeddings to insert\n",
+    "                embeddings[:, V_id:]        # Part of original matrix after replacement\n",
+    "            ])\n",
+    "        else:\n",
+    "            embeddings = np.hstack([\n",
+    "                embeddings[:, :start_id],   # Part of original matrix before replacement\n",
+    "                new_embeddings,             # New embeddings to insert\n",
+    "                embeddings[:, V_id:]        # Part of original matrix after replacement\n",
+    "            ])\n",
+    "    return embeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "######################\n",
     "# Choose ids of (Ux, Vx) to alter embeddings\n",
@@ -693,17 +695,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 hyperparameter combinations\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_size = X_train_computed.shape[1]\n",
     "\n",
@@ -735,49 +729,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "saving results to ./../../fast-results/results/meanpool_single/wnli/val_20240204_175313_DistilRoBERTa.csv\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "23d4e9688615440fb358a8e27ed942e1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "  0%|          | 0/1 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/50 | Training Loss : 0.68562912940979 | Validation Loss : 0.689026951789856\n",
-      "Accuracy : 0.5633802816901409 | f1 : 0.5633802816901409\n",
-      "\n",
-      "Epoch 2/50 | Training Loss : 0.6921358704566956 | Validation Loss : 0.6929911375045776\n",
-      "Accuracy : 0.5633802816901409 | f1 : 0.5633802816901409\n",
-      "\n",
-      "Epoch 3/50 | Training Loss : 0.6932677030563354 | Validation Loss : 0.6929928064346313\n",
-      "Accuracy : 0.5633802816901409 | f1 : 0.5633802816901409\n",
-      "\n",
-      "Epoch 4/50 | Training Loss : 0.6935994029045105 | Validation Loss : 0.6928735971450806\n",
-      "Accuracy : 0.5633802816901409 | f1 : 0.5633802816901409\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Create output folder if it doesn't exist\n",
     "if not os.path.exists('output'):\n",
