Add adapter_type options

--- a/fast/adapters.ipynb
+++ b/fast/adapters.ipynb
@@ -22,16 +22,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "adapter_type options: bottleneck, prefix, prompt"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "task_param = \"cola\"\n",
+    "adapter_type = \"bottleneck\"\n",
     "\n",
     "training_params = {\n",
     "    'learning_rate': 1e-4,\n",
-    "    'num_train_epochs': 6,\n",
+    "    'num_train_epochs': 1,\n",
     "    'per_device_train_batch_size': 32,\n",
     "    'per_device_eval_batch_size': 32,\n",
     "    'output_dir': 'adapter-distillroberta-base'\n",
@@ -54,30 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# # Installations for Colab \n",
-    "# !pip install statsmodels==0.13.5\n",
-    "# !pip install scikit-learn==1.1.3\n",
-    "# !pip install pytest==7.4.0\n",
-    "# !pip install pandas==1.5.3\n",
-    "# !pip install numpy==1.24.4\n",
-    "# !pip install matplotlib==3.7.2\n",
-    "# !pip install torch==2.0.1\n",
-    "# !pip install datasets==2.14.5\n",
-    "# !pip install ipywidgets==8.1.1\n",
-    "# !pip install jupyterlab==4.0.8\n",
-    "# !pip install pynvml==11.5.0\n",
-    "# !pip install sentence-transformers==2.3.1\n",
-    "# !pip install adapters==0.1.1\n",
-    "# !pip install accelerate -U # This installs accelerate-0.26.1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +74,7 @@
     "# Dataset\n",
     "from datasets import load_dataset\n",
     "from transformers import RobertaTokenizer, RobertaConfig, TrainingArguments, EvalPrediction, default_data_collator\n",
-    "from adapters import AutoAdapterModel, AdapterTrainer, ConfigUnion, BnConfig, ParBnConfig, PrefixTuningConfig"
+    "from adapters import AutoAdapterModel, AdapterTrainer, ConfigUnion, BnConfig, ParBnConfig, PrefixTuningConfig, PromptTuningConfig"
    ]
   },
   {
@@ -101,9 +86,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mps\n"
+     ]
+    }
+   ],
    "source": [
     "device_name = \"cpu\"  # Default device is CPU\n",
     "if torch.cuda.is_available():\n",
@@ -128,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,9 +159,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DatasetDict({\n",
+       "    train: Dataset({\n",
+       "        features: ['sentence', 'label', 'idx'],\n",
+       "        num_rows: 8551\n",
+       "    })\n",
+       "    validation: Dataset({\n",
+       "        features: ['sentence', 'label', 'idx'],\n",
+       "        num_rows: 1043\n",
+       "    })\n",
+       "    test: Dataset({\n",
+       "        features: ['sentence', 'label', 'idx'],\n",
+       "        num_rows: 1063\n",
+       "    })\n",
+       "})"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "if task_param == \"mnli_matched\": \n",
     "    data = load_dataset(\"glue\", \"mnli\") \n",
@@ -195,9 +212,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e9f51c80ba3549048663e8a2423139c2",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/1043 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0131112f72d048f995c5cd4fa194c896",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Map:   0%|          | 0/1063 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "tokenizer = RobertaTokenizer.from_pretrained('distilroberta-base')\n",
     "\n",
@@ -244,9 +290,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Some weights of RobertaAdapterModel were not initialized from the model checkpoint at distilroberta-base and are newly initialized: ['heads.default.3.bias']\n",
+      "You should probably TRAIN this model on a down-stream task to be able to use it for predictions and inference.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total trainable parameters for raw model: 82760793\n"
+     ]
+    }
+   ],
    "source": [
     "if task_config.class_type == \"R\":\n",
     "    config = RobertaConfig.from_pretrained(\"distilroberta-base\")\n",
@@ -257,7 +319,10 @@
     "\n",
     "model = AutoAdapterModel.from_pretrained(\n",
     "    \"distilroberta-base\",\n",
-    "    config=config).to(device)"
+    "    config=config).to(device)\n",
+    "\n",
+    "pytorch_total_params = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
+    "print(f\"total trainable parameters for raw model: {pytorch_total_params}\")"
    ]
   },
   {
@@ -269,14 +334,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "total trainable parameters for fine-tuning method: 8326235\n"
+     ]
+    }
+   ],
    "source": [
-    "adapter_config = BnConfig(mh_adapter=True,\n",
-    "                          output_adapter=True,\n",
-    "                          reduction_factor=2,\n",
-    "                          non_linearity='relu')\n",
+    "if adapter_type == \"bottleneck\":\n",
+    "    adapter_config = BnConfig(mh_adapter=True,\n",
+    "                            output_adapter=True,\n",
+    "                            reduction_factor=2,\n",
+    "                            non_linearity='relu')\n",
+    "elif adapter_type == \"prefix\":\n",
+    "    adapter_config = PrefixTuningConfig()\n",
+    "elif adapter_type == \"prompt\":\n",
+    "    adapter_config = PromptTuningConfig()\n",
     "\n",
     "# Other adapter config options: \n",
     "# ParBnConfig(reduction_factor=4)\n",
@@ -290,7 +368,7 @@
     "\n",
     "# Add a matching prediction head\n",
     "if task_config.class_type == \"R\":\n",
-    "    model.add_regression_head(task_param) \n",
+    "    model.add_regression_head(task_param)\n",
     "else:\n",
     "    model.add_classification_head(\n",
     "        task_param,\n",
@@ -300,7 +378,10 @@
     "model.train_adapter(task_param)\n",
     "\n",
     "# Activate the adapter\n",
-    "model.set_active_adapters(task_param) "
+    "model.set_active_adapters(task_param)\n",
+    "\n",
+    "pytorch_total_params = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
+    "print(f\"total trainable parameters for fine-tuning method: {pytorch_total_params}\")"
    ]
   },
   {
@@ -319,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,12 +435,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "80de44b3b527427f92f5614778a8aeb5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/268 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mtrainer\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtrain\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/miniforge3/envs/fast/lib/python3.9/site-packages/transformers/trainer.py:1555\u001b[0m, in \u001b[0;36mTrainer.train\u001b[0;34m(self, resume_from_checkpoint, trial, ignore_keys_for_eval, **kwargs)\u001b[0m\n\u001b[1;32m   1553\u001b[0m         hf_hub_utils\u001b[38;5;241m.\u001b[39menable_progress_bars()\n\u001b[1;32m   1554\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m-> 1555\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43minner_training_loop\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1556\u001b[0m \u001b[43m        \u001b[49m\u001b[43margs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1557\u001b[0m \u001b[43m        \u001b[49m\u001b[43mresume_from_checkpoint\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mresume_from_checkpoint\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1558\u001b[0m \u001b[43m        \u001b[49m\u001b[43mtrial\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtrial\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1559\u001b[0m \u001b[43m        \u001b[49m\u001b[43mignore_keys_for_eval\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mignore_keys_for_eval\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m   1560\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m~/miniforge3/envs/fast/lib/python3.9/site-packages/transformers/trainer.py:1862\u001b[0m, in \u001b[0;36mTrainer._inner_training_loop\u001b[0;34m(self, batch_size, args, resume_from_checkpoint, trial, ignore_keys_for_eval)\u001b[0m\n\u001b[1;32m   1859\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39maccelerator\u001b[38;5;241m.\u001b[39maccumulate(model):\n\u001b[1;32m   1860\u001b[0m     tr_loss_step \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtraining_step(model, inputs)\n\u001b[0;32m-> 1862\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m (\n\u001b[1;32m   1863\u001b[0m     args\u001b[38;5;241m.\u001b[39mlogging_nan_inf_filter\n\u001b[1;32m   1864\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m is_torch_tpu_available()\n\u001b[1;32m   1865\u001b[0m     \u001b[38;5;129;01mand\u001b[39;00m (torch\u001b[38;5;241m.\u001b[39misnan(tr_loss_step) \u001b[38;5;129;01mor\u001b[39;00m torch\u001b[38;5;241m.\u001b[39misinf(tr_loss_step))\n\u001b[1;32m   1866\u001b[0m ):\n\u001b[1;32m   1867\u001b[0m     \u001b[38;5;66;03m# if loss is nan or inf simply add the average of previous logged losses\u001b[39;00m\n\u001b[1;32m   1868\u001b[0m     tr_loss \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m tr_loss \u001b[38;5;241m/\u001b[39m (\u001b[38;5;241m1\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mstate\u001b[38;5;241m.\u001b[39mglobal_step \u001b[38;5;241m-\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_globalstep_last_logged)\n\u001b[1;32m   1869\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "trainer.train()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
